<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Contenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LayoutVertiTitulo"
        android:layout_width="374dp"
        android:layout_height="81dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="199dp"
            android:layout_height="34dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/txt_view_String_Titulo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutVertiNumeros"
        android:layout_width="379dp"
        android:layout_height="204dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LayoutVertiTitulo"
        app:layout_constraintVertical_bias="0.022">

        <EditText
            android:id="@+id/NumUno"
            android:minHeight="48dp"
            android:hint="0"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginBottom="40dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/NumDos"
            android:minHeight="48dp"
            android:hint="0"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutVertiResult"
        android:layout_width="146dp"
        android:layout_height="163dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LayoutHoriMult_Div"
        app:layout_constraintVertical_bias="0.366">


        <TextView
            android:id="@+id/TextResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_view_String_Resultado" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutHoriSuma_Resta"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LayoutVertiNumeros"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/BotonMas"
            android:layout_width="129dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:text="@string/txt_view_String_Suma" />

        <Button
            android:id="@+id/BotonMenos"
            android:layout_width="129dp"
            android:layout_height="60dp"
            android:text="@string/txt_view_String_Resta" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutHoriMult_Div"
        android:layout_width="378dp"
        android:layout_height="62dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LayoutHoriSuma_Resta"
        app:layout_constraintVertical_bias="0.048">

        <Button
            android:id="@+id/BotonMultiplicar"
            android:layout_width="129dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:text="@string/txt_view_String_Multi" />

        <Button
            android:id="@+id/BotonDividir"
            android:layout_width="129dp"
            android:layout_height="60dp"
            android:text="@string/txt_view_String_Div" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>